#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-18
2014-06-25 David Schneider
- report Translator event processing time as percentage of total time.
- add switches for splitting hdf5 into separate calib cycles.	

Tag: V00-01-17
2014-06-17 David Schneider
- update documentation about storing epics.

Tag: V00-01-16
2014-06-16 David Schneider
- switch from using stamp to event tag for deciding when to write
  epics pvs. trac ticket #310
- add unit test for translating timetool data

Tag: V00-01-15
2014-06-14 David Schneider
- add option to translate epics on every shot (don't check for change)
  short term solution for problem with translating timetool pv's that
  don't set sec/nsec
	
Tag: V00-01-14
2014-06-14 David Schneider
- regenerate with psddl V00-13-12: move default_psana.cfg into data subdir
- regenerate with psddldata V01-00-10: trac ticket #309
	
Tag: V00-01-13
2014-06-12 David
- move automatic translation config file into data subdir.

Tag: V00-01-12
2014-06-12 David
- add psana config file to be used during automatic translation

Tag: V00-01-11
2014-06-10 David
- refactor between this package and package psddl_hdf2psana
  move NDArrayParameters into psddl_hdf2psana
- extend two unit tests to read back fixed and vlen arrays into psana
  tests psddl_hdf2psana V00-09-09

Tag: V00-01-10
2014-05-30 David
- a unit test was not cleaning up after itself.

Tag: V00-01-09
2014-05-30 David
- fix bug that caused epics aliases with a / in them to be discarded.

Tag: V00-01-08
2014-05-19 David
- correct how multi value epics pv's are translated.
- track ticket #301.

Tag: V00-01-07
2014-05-18 David