@@ -397,3 +397,8 @@ split = NoSplit
 # The user must make sure to launch all 10 Translator jobs to get all the calib cycle
 # files written. splitJobNumber=0 will write the master file with links to the calib
 # cycle files.
+
+#---------------------
+# OTHER
+# to produce no output, set quiet=1
+# quiet=0
