@@ -363,6 +363,10 @@ split = NoSplit
 # files written. splitJobNumber=0 will write the master file with links to the calib
 # cycle files.
 
+#---------------------
+# OTHER
+# to produce no output, set quiet=1
+# quiet=0
 ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 ::::template:::: type_aliases_cpp
 ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
