@@ -11,6 +11,11 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-19
+2014-06-30 David Schneider
+- Translate pixel gain V1 calibration data if present
+- document quiet switch for no output
+
 Tag: V00-01-18
 2014-06-25 David Schneider
 - report Translator event processing time as percentage of total time.
